--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
