--- a/front/package.json
+++ b/front/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.1.0",
     "element-ui": "^2.4.1",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.7",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
