--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.1",
+    "streamedian": "git://github.com/Streamedian/html5_rtsp_player.git",
     "vue": "^2.5.2",
     "vue-amap": "^0.5.7",
     "vue-router": "^3.0.1"
