--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.47</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.fusesource.mqtt-client/mqtt-client -->
+    <dependency>
+      <groupId>org.fusesource.mqtt-client</groupId>
+      <artifactId>mqtt-client</artifactId>
+      <version>1.14</version>
+    </dependency>
+
   </dependencies>
 
   <build>
